# scripts

./: jump.sh
edit/: install.sh  locations.txt
edit-fzf/: Cargo.toml  README.md  install.sh
edit-fzf/src/: main.rs
edit/src/: main.rs
grades/: Cargo.toml
grades/src/: database.rs  main.rs
magickeeb/: magickeeb.sh
menu/: menu.sh
redshift/: uredshift
