[package]
name = "grades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
serde = { version = "1.0.162", features = ["serde_derive"] }
tokio = { version = "1.28.1", features = ["full"] }
